# starcraft-rest-api-v1

./: CHANGELOG.md  starcraft-rest-api-v1.cabal  terran.sqlite
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Database.hs  Model.hs  Routes.hs
