cabal-version:      2.4
name:               starcraft-rest-api-v1
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: RESTful API with Terran Units from StarCraft 2

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             mau5mat
maintainer:         mau5mat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable starcraft-rest-api-v1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Database,
                   Model,
                   Routes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      scotty,
                      selda,
                      selda-sqlite,
                      aeson,
                      text
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
